--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
 		<input type="button" id="save" value="Save">
 		<input type="button" id="clear" value="Clear">
 	</p>
+	<script>
+		// データの保存
+		// localStorage.setItem('memo', 'value')
+		// データの取得
+		// localStorage.getItem('memo')
+		// データの削除
+		// localStorage.removeItem('memo')
+		// データの全削除
+		// localStorage.clear()
+	</script>
 </body>
 </html>
