--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 			localStorage.setItem('memo', document.getElementById('memo').value)
 			console.log(localStorage.getItem('memo'))
 		})
+
+		// clear ボタンをクリックしたら textarea に入力されたテキストを削除する
+		document.getElementById('clear').addEventListener('click', function() {
+			document.getElementById('memo').value = ''
+			localStorage.removeItem('memo')
+			console.log(localStorage.getItem('memo'))
+		})
 	</script>
 </body>
 </html>
