✨ feat: textarea にテキストが入力されるたびに、それを localStorage に保存する

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 			document.getElementById('memo').value = localStorage.getItem('memo')
 		}
 
+		// textarea にテキストが入力されるたびに、それを localStorage に保存する
+		document.getElementById('memo').addEventListener('keyup', function() {
+			localStorage.setItem('memo', document.getElementById('memo').value)
+		})
+
 		// textarea に入力されたテキストを自動で保存する
 		// 即時関数（関数を定義すると同時に実行する）
 		// 参考: https://qiita.com/katsukii/items/cfe9fd968ba0db603b1e
